--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Mediation Analysis with External Summary-Level Information on Total Effec
 Version: 0.1.1
 Description: Fill in.
 Authors@R: c(
-    person(given = "Jon", family = "Boss", role = c("cre"), email = "gutian@umich.edu"),
+    person(given = "Jon", family = "Boss", role = c("cre"), email = "bossjona@umich.edu"),
     person(given = "Bhramar", family = "Mukherjee", role = c("aut"), email = "bhramar@umich.edu"),
     person(given = "Michael", family = "Kleinsasser", role = c("aut"), email = "mkleinsa@umich.edu")
     )
@@ -17,9 +17,8 @@ Depends:
     R (>= 3.6.2)
 Imports:
     MASS, 
-    ggplot2, 
-    patchwork
-URL: https://github.com/umich-biostatistics/MetaIntegration
-BugReports: https://github.com/umich-biostatistics/MetaIntegration/issues
-RoxygenNote: 7.1.1
+    ggplot2
+URL: https://github.com/umich-cphds/messi
+BugReports: https://github.com/umich-cphds/messi/issues
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
