--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_void)
+importFrom(progress,progress_bar)
 importFrom(stats,coef)
 importFrom(stats,lm)
 importFrom(stats,pchisq)
