--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Package: messi
 Title: Mediation with External Summary Statistic Information
 Version: 0.1.2
 Description: Fits the MESSI, hard constraint, and unconstrained models in Boss 
-    et al. (2023) <arXiv:2306.17347> for mediation analyses with external 
+    et al. (2023) <doi:10.48550/arXiv.2306.17347> for mediation analyses with external 
     summary-level information on the total effect.
 Authors@R: c(
     person(given = "Jonathan", family = "Boss", role = c("aut"), email = "bossjona@umich.edu"),
